--- a/hometask_7.ipynb
+++ b/hometask_7.ipynb
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 166,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1635,16 +1635,17 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1], dtype=int64)"
+       "(1, 101322)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x.data"
+    "x.data\n",
+    "x.shape"
    ]
   },
   {
@@ -1871,23 +1872,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LDA"
+    "### ДЗ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 248,
    "metadata": {
-    "id": "Rn_580PkLCCj"
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LatentDirichletAllocation(n_components=20)"
+       "LatentDirichletAllocation(batch_size=1, max_iter=50, n_components=20, n_jobs=-1)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1895,72 +1896,182 @@
    "source": [
     "import numpy as np\n",
     "from sklearn.decomposition import LatentDirichletAllocation as LDA\n",
-    "lda  = LDA(n_components=20)\n",
+    "lda  = LDA(n_components=20, max_iter=50, batch_size=1, n_jobs = -1,)\n",
     "lda.fit(X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "def _print(string):\n",
+    "  sys.stdout.write(string)\n",
+    "  sys.stdout.flush()\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['slax' 'unburned' 'ban' 'moments' 'climbs' 'rgju4alkp9l' 'mvsgv' 'akc6'\n",
-      " 'stockfisch' '849']\n",
-      "['integral' 'stockpiling' 'holden' '775' 'kookiness' '3154' 'disassociate'\n",
-      " 'gags' 'pietrangelo' 'chargebacks']\n",
-      "['dungeon' 'rik' 'glim' 'climbs' 'stargell' 'journeyed' 'upheavals' 'qf7i'\n",
-      " 'esia' 'cloutmeister' 'trujillo']\n",
-      "['deserving' 'church' '65' 'pedic' 'ignores' 'vbdivmhm' '4bc76' 'climbs'\n",
-      " 'undue' 'markowitz']\n",
-      "['applicable' 'batf' 'juggle' 'deserving' 'gain' 'automatically' 'smileys'\n",
-      " '1z6ei' 'lives' 'chargebacks']\n",
-      "['batf' 'flare' 'pedic' 'evidence' 'borland' 'q2' '990' '_told_'\n",
-      " 'unburned' '4bc76']\n",
-      "['fahr' '11471t' 'expended' 'honourable' 'xtappaddinput' 'distruction'\n",
-      " 'y4p9' '1067' 'motorolla' 'omb0w6_v']\n",
-      "['121624' 'crucifiers' 'crying' 'tragic' 'genes' 'wharf' '3j7prv' 'abgc2'\n",
-      " 'belivers' 'scientology']\n",
-      "['applicable' 'batf' 'juggle' 'deserving' '65' 'gain' 'branstad' 'pedic'\n",
-      " 'glc' 'tychay']\n",
-      "['65' 'snake' 'tp3' 'shipped' 'get_line' 'anaxandirdes' 'lamented' 'yxhg'\n",
-      " 'usian' 'fn7']\n",
-      "['2di' 'ug' 'pacific' 'elminate' 'yacino' 'northy' 'curiosity' 'boleslaw'\n",
-      " '77c22e' 'keeper' '74y' 'infintely' '6rm']\n",
-      "['pp' 'sj7di' 'fuentez' 'absense' 'climbs' 'kilpatrick' 'curb' 'gads'\n",
-      " 'accolade' 'individ']\n",
-      "['notwithstanding' 'engelbert' 'zrcimv' 'nname' 'expended' 'xtappaddinput'\n",
-      " 'dysfunction' 'pietrangelo' 'orono' 'gf9v91']\n",
-      "['particularly' 'yf9f9f9f0' '4bc76' 'conveys' 'genes' 'equiv' 'suites'\n",
-      " 'novber' '_atheism' 'motorolla']\n",
-      "['zrcimv' 'honourable' 'xtappaddinput' 'p3nnk' '514a' '2ulcb9' 'uplifting'\n",
-      " '1067' 'arie' 'gf9v91']\n",
-      "['closest' 'incapable' 'adeno' 'defaultscreen' '11101011b' 'wcv' '514a'\n",
-      " 'y59ffh' '1qx8z' 'rmr']\n",
-      "['zrcimv' 'holden' 'expended' 'honourable' 'xtappaddinput' 'cagdas'\n",
-      " '05402' 'authorizing' 'pietrangelo' 'orono']\n",
-      "['cronologia' '4947' 'pressurize' 'xtappaddinput' 'niveau' 'accretie'\n",
-      " 'strolling' 'motorolla' 'drl' 't0t7j']\n",
-      "['zrcimv' 'expended' 'bitftp' 'honourable' 'xtappaddinput' 'p3nnk'\n",
-      " 'motorolla' 'waseda' 'drl' '3jf']\n",
-      "['1964' 'unaurhorized' 'cracking' 'outing' '11471t' 'negate' 'turgur'\n",
-      " 'cagdas' 'authorizing' 'pietrangelo']\n"
+      "========\n",
+      "epoch 1 took 81 seconds\n",
+      "========\n",
+      "epoch 2 took 81 seconds\n",
+      "========\n",
+      "epoch 3 took 81 seconds\n",
+      "========\n",
+      "epoch 4 took 81 seconds\n",
+      "========\n",
+      "epoch 5 took 81 seconds\n",
+      "========\n",
+      "epoch 6 took 81 seconds\n",
+      "========\n",
+      "epoch 7 took 80 seconds\n",
+      "========\n",
+      "epoch 8 took 83 seconds\n",
+      "========\n",
+      "epoch 9 took 81 seconds\n",
+      "========\n",
+      "epoch 10 took 80 seconds\n",
+      "['wondering' 'gain' 'pity' 'ahp' 'caustic' 'keenan' 'attributing' 'shov'\n",
+      " 'zrcimv' 'w1t85' 'newtek']\n",
+      "['wondering' 'applicable' 'batf' 'gain' 'flare' 'evidence' 'hewlett'\n",
+      " '1z6ei' 'scirocco' 'ytn']\n",
+      "['applicable' '65' 'smileys' 'riding' 'bicycling' 'heritage' 'bossy'\n",
+      " '11hddn' 'moments' 'greatest' 'cw86' 'climbs' 'inquires']\n",
+      "['65' 'branstad' '1z6ei' 'mile' 'o0_' 'd0' 'genes' '11471t' 'climbs'\n",
+      " 'choueiry']\n",
+      "['fuentez' 'unusal' 'darkness' 'caustic' 'iholsman' 'ics' '10036'\n",
+      " 'regulate' 'remodeled' 'zrcimv' 'relcom' 'xtappaddinput' 'compass6']\n",
+      "['wondering' 'deserving' 'evidence' 'msl' 'invades' 'covering' 'zpg' 'fs'\n",
+      " 'ahp' '0ggv' 'climbs' 'potato' 'stressful' 'torches' 'frip']\n",
+      "['1z6ei' 'continuously' 'slapped' 'fahr' 'sterling' 'w1t85' 'newtek'\n",
+      " 'frip' 'dearer' 'augustus']\n",
+      "['dungeon' 'rik' 'glim' 'ng0fpkhf7' 'stargell' 'journeyed' 'upheavals'\n",
+      " 'qf7i' 'esia' 'cloutmeister' 'trujillo' 'lacht']\n",
+      "['perennial' 'continuously' 'contretemps' 'vd8' 'genes' 'v11' '11471t'\n",
+      " 'w1t85' 'potato' 'frip']\n",
+      "['magnetosphere' 'pedic' 'automatically' 'developers' 'bicycling' '1z6ei'\n",
+      " 'fo9h' 'cosmicly' '16v' 'revelations' 'verlag' 'ng1tll' 'aff106dz'\n",
+      " 'climbs' 'integral' 'nrhjn']\n",
+      "['zrcimv' 'expended' 'honourable' 'xtappaddinput' 'p3nnk' 'cagdas'\n",
+      " 'authorizing' 'pietrangelo' 'orono' '3jf']\n",
+      "['borland' 'hewlett' 'msl' 'farmers' 'alleviates' 'goaltenders' 'sacrum'\n",
+      " 'mi0' 'rtf' '528']\n",
+      "['11471t' 'zrcimv' 'expended' 'honourable' 'xtappaddinput' 'y4p9' '1067'\n",
+      " 'motorolla' 'waseda' 'drl']\n",
+      "['applicable' 'flare' 'branstad' 'ignores' 'kxqwl8' '2800' 'zrcimv'\n",
+      " 'grandprix' 'ills' 'honourable' 'frip']\n",
+      "['65' 'russians' 'hewlett' 'heritage' '_told_' '11hddn' 'pump'\n",
+      " 'notwithstanding' 'iholsman' 'microorganisms' 'm72' '08w' 'x0i67'\n",
+      " 'expended' 'xtgetselectionvalueincremental' 'personable' 'taces' 'thp']\n",
+      "['enlighten' 'applicable' 'zpg' '11hddn' 'lamentation' 'commentator'\n",
+      " 'boleslaw' '11471t' 'zrcimv' 'climbs' 'potato' 'sump' 'newtek']\n",
+      "['blinds' '71199s1' '35294' '4368' 'hellenized' 'u9j' 'jmf' 'breakin'\n",
+      " 'anvil' 'metgem' 'ekfoxkylv' 'twain']\n",
+      "['source' 'lowell' 'practical' 'barreled' 'svcxq' 'absorb' 'elated'\n",
+      " 'engelbert' 'climbs' 'prix' 'aretz' 'impemented' 'autoranging'\n",
+      " '_____________________________________________________' 'ho5i'\n",
+      " 'annotated' 'vulcanized' 'lyjj3' '0m75']\n",
+      "['included' 'vendors' 'badshmseg' 'patients' 'gain' 'branstad' 'smileys'\n",
+      " '1z6ei' 'vbdivmhm' 'giyu' 'lives' 'recondense' 'germano' 'zpg' 'eaodn']\n",
+      "['source' 'closest' 'cross' '680060' '2800' 'proterm' 'zfe' 'genes'\n",
+      " 'zrcimv' 'plow' 'occassion' '779j']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#step 1\n",
+    "n_kw, n_dk, n_k = np.zeros((20, 101322)), np.zeros((11314, 20)), np.zeros((20,))\n",
+    "#step 2\n",
+    "xnz = X_train.nonzero()\n",
+    "xnzlen = X_train.nonzero()[0].shape[0]\n",
+    "tags = np.random.choice(20, xnzlen)\n",
+    "for i in range(xnzlen):\n",
+    "  k, d, w = tags[i], xnz[0][i], xnz[1][i]\n",
+    "  n_kw[k, w] += 1\n",
+    "  n_dk[d, k] += 1\n",
+    "  n_k[k] += 1\n",
+    "#step 3\n",
+    "def main_algo(a_k, b, epoch_num = 10):\n",
+    "  for epoch in range(epoch_num):\n",
+    "    start_time = time.time()\n",
+    "    for i in range(xnzlen):\n",
+    "      if i % 10 ** 5 == 0:\n",
+    "        _print(\"=\")\n",
+    "      k, d, w = tags[i], xnz[0][i], xnz[1][i]\n",
+    "      n_kw[k, w] -= 1\n",
+    "      n_dk[d, k] -= 1\n",
+    "      n_k[k] -= 1\n",
+    "      p_k = (n_dk[d] + a_k) * (n_kw[:, w] + b[w]) / (n_k + np.sum(b))\n",
+    "      p_k /= np.sum(p_k)\n",
+    "      tags[i] = np.random.choice(20, p = p_k)\n",
+    "      k = tags[i]\n",
+    "      n_kw[k, w] += 1\n",
+    "      n_dk[d, k] += 1\n",
+    "      n_k[k] += 1\n",
+    "    _print('\\nepoch %d took %d seconds\\n' % (epoch + 1, time.time() - start_time))\n",
+    "a_k = np.full((20,), 1.) # не понял чем инициализировать\n",
+    "b = np.full((101322,), 1. ) # не понял чем инициализировать\n",
+    "main_algo(a_k, b, 10)\n",
+    "#result\n",
+    "words = np.asarray(list(vectorizer.vocabulary_.keys()))\n",
+    "for i in range(20):\n",
+    "  a = (n_kw[i] >= np.sort(n_kw[i])[-10])\n",
+    "  print(words[a])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1| 00 15 80 ago bad best bob cs don drive interested\n",
+      "2| 00 10 11 15 16 19 24 30 55 88\n",
+      "3| 10 14 25 26 28 29 59 actually au based display edu player\n",
+      "4| 14 17 30 63 83 85 com does edu paint\n",
+      "5| arab armenian army bad called case children control did don genocide like serdar\n",
+      "6| 00 13 19 39 42 66 92 99 ago defined edu email fg leafs sale\n",
+      "7| 30 appreciated box card condition drive interested sale scsi shipping\n",
+      "8| banks cadre chastity dsl geb gordon intellect n3jxp pitt shameful skepticism surrender\n",
+      "9| 486 appreciated board brand com computer does drive email sale\n",
+      "10| 146 18 20 22 28 30 3rd 500 72 bbs colors copy david edu game mike\n",
+      "11| don just know like make people say think time way\n",
+      "12| 23 24 39 43 44 51 68 86 boston chicago\n",
+      "13| does don just know like need thanks use used using\n",
+      "14| 10 16 17 27 according anybody don electrical experiences know sale\n",
+      "15| 14 185 24 29 49 actually amateur bike called centris db hp hr just list mileage rubber sf\n",
+      "16| 000 10 92 actually bit bought ca does don edu email ford interested\n",
+      "17| cd e1 hi m0 mn mt nb sb sc uh wk yd\n",
+      "18| 06 4t 5000 56 advance appreciate bobby car edu er fd fourth hd im ma playoff roger student tm\n",
+      "19| 09 100 125 129 15 17 25 30 32 35 50 71 79 92 wm\n",
+      "20| 06 1993 200 64 anybody battery caps com don handles jr m4\n"
      ]
     }
    ],
    "source": [
     "words = np.asarray(list(vectorizer.vocabulary_.keys()))\n",
     "for i in range(20):\n",
-    "  a = (lda.exp_dirichlet_component_[i] >= np.sort(lda.exp_dirichlet_component_[i])[-10])\n",
-    "  print(words[a])"
+    "  mask = (n_kw[i] >= np.sort(n_kw[i])[-10])\n",
+    "  print(\"%d|\" % (i + 1), \" \".join(vectorizer.inverse_transform(mask)[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -1988,127 +2099,21 @@
        " 'talk.religion.misc']"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "newsgroups_train.target_names"
+    "newsgroups_train.target_names\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Полученные алгоритмом LDA теги содержат очень много мусорных слов вроде yf9f9f9f0 или 11471t, которые почему-то встречаются в датасете чаще многих реальных слов. Тем не менее большую часть на мой взгляд  можно отнести к некоторым тегам датасета, так например 8ой тег со словами 'crucifiers' 'crying' 'tragic' 'genes' 'wharf' 'belivers' 'scientology' скорее всего относится к 'soc.religion.christian' или 'talk.religion.misc' (распятие, плач, пристань, верующие, довольно часто упоминаются в христианских текстах), а последний 20ый тег со словами 'unaurhorized' 'cracking' 'outing' 'negate' 'turgur' 'cagdas' 'authorizing' скорее всего относится к 'sci.crypt'."
+    "Полученные теги содержат много чисел, скорее всего за 10 эпох алгоритм ещё не сошёлся. Но можно выделить например 5 тег, который относится к ближнему востоку или 8, который относится к скептицизму."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###  Gibbs Sampling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BernoulliRBM(n_components=20, n_iter=1)"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.neural_network import BernoulliRBM\n",
-    "gs = BernoulliRBM(n_components=20, n_iter=1)\n",
-    "gs.fit(X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__setstate__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_check_n_features',\n",
-       " '_fit',\n",
-       " '_free_energy',\n",
-       " '_get_param_names',\n",
-       " '_get_tags',\n",
-       " '_mean_hiddens',\n",
-       " '_more_tags',\n",
-       " '_repr_html_',\n",
-       " '_repr_html_inner',\n",
-       " '_repr_mimebundle_',\n",
-       " '_sample_hiddens',\n",
-       " '_sample_visibles',\n",
-       " '_validate_data',\n",
-       " 'batch_size',\n",
-       " 'components_',\n",
-       " 'fit',\n",
-       " 'fit_transform',\n",
-       " 'get_params',\n",
-       " 'gibbs',\n",
-       " 'h_samples_',\n",
-       " 'intercept_hidden_',\n",
-       " 'intercept_visible_',\n",
-       " 'learning_rate',\n",
-       " 'n_components',\n",
-       " 'n_features_in_',\n",
-       " 'n_iter',\n",
-       " 'partial_fit',\n",
-       " 'random_state',\n",
-       " 'score_samples',\n",
-       " 'set_params',\n",
-       " 'transform',\n",
-       " 'verbose']"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
